# Asset_Tracker

./: README.md  main.cc
QT/ATQuick/: AssetsForm.ui.qml  CMakeLists.txt  assetsmodel.cpp  assetsmodel.h  main.qml  qml.qrc  tracker.cpp  tracker.h
QT/AT_Desktop/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
